fixing picture being to dim on mobile

--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -50,7 +50,7 @@
 }
 @media only screen and (max-width: 600px) {
     .top-container {
-        filter: brightness(30%);
+        filter: brightness(50%);
     }
     .header {
         font-size: 50px;
